Fixed layout bugs.

--- a/style.css
+++ b/style.css
@@ -88,15 +88,6 @@ a:hover {
 	background: #c3daf0;
 }
 
-.stateArea {
-	box-sizing:border-box;
-	padding: 0 5px;
-	overflow: auto;
-	flex: 1 1 auto;
-}
-#runningView>:first-child {
-	padding-top: 12px;
-}
 
 .codeWrapper {
 	margin-left: -5px;
@@ -191,6 +182,29 @@ a:hover {
 }
 
 /*
+ * LHS views
+ */
+
+.stateArea {
+	box-sizing:border-box;
+	padding: 0 5px;
+	overflow: auto;
+	flex: 1 1 auto;
+
+	display: flex;
+}
+.stateArea>div {
+	flex: 1 1 auto;
+	display: flex;
+	flex-direction: column;
+}
+
+#runningView>:first-child {
+	padding-top: 12px;
+}
+
+
+/*
  * Stack View
  */
 
@@ -205,7 +219,7 @@ a:hover {
 	margin: 0;
 }
 
-#stack>ol>li:first-child::before {
+#stack>ol>li:last-child::before {
 	content: "";
 }
 #stack>ol>li {
@@ -219,7 +233,7 @@ a:hover {
 	background: #c3daf0;
 }
 #stack>ol>li::before {
-	content: "\27A5\2004";
+	content: "\27A6\2004";
 	font-size: 85%;
 }
 #stack>ol>li>span:last-child {
@@ -298,4 +312,12 @@ a:hover {
 .viewDivider {
 	margin: 0 -5px 7px;
 	border-bottom: thin solid gray;
+}
+
+/*
+ * Register View
+ */
+
+#registers {
+	flex: 1 1 auto;
 }
